更新项目配置，添加URL检查和站点地图检查功能；实现Coze API调用，替换模拟实现并增强错误处理

--- a/project.config.json
+++ b/project.config.json
@@ -20,7 +20,9 @@
     "packNpmRelationList": [],
     "ignoreUploadUnusedFiles": true,
     "compileHotReLoad": true,
-    "skylineRenderEnable": true
+    "skylineRenderEnable": true,
+    "urlCheck": false,
+    "checkSiteMap": false
   },
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
